--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "chart.js": "^4.5.1",
     "rxjs": "~7.8.0",
+    "secure-ls": "^2.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
